Fixed emoji alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,7 @@ hr {
     font-size: 20px;
     line-height: 2.5;
     margin-left: -15px;
+    text-align: left;
   }
 
 /* These style the reaction buttons. */
@@ -242,5 +243,5 @@ https://stackoverflow.com/questions/3247358/how-do-i-wrap-text-with-no-whitespac
 
 .nav {
    position: fixed;
-   top: 0;
+   top: 0px;
 }
